[package]
name = "cropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew.git", rev = "421b4e1f608e6d648dcf571157b081fcbd886996", features = ["csr"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["custom"] }
photon-rs = "0.3"

gloo = { version = "0.5", features = ["futures"] }
wasm-bindgen-futures = "*"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["File", "Blob", "HtmlCanvasElement"] }

wasm-logger = "0.2"
log = "0.4"