[package]
name = "cropper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.20"
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["extensions"] }

wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlCanvasElement", "CanvasRenderingContext2d", "HtmlImageElement"] }

log = "0.4"