[package]
name = "test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "0.20", features = ["csr"] }
cobul = { git = "https://github.com/tdooms/cobul.git", features = ["extensions"] }
cropper = { path = ".." }

wasm-bindgen-futures = "*"
web-sys = { version = "0.3", features = ["File", "Blob"] }
gloo = { version = "0.5", features = ["futures"] }
wasm-bindgen = "0.2"

wasm-logger = "0.2"
log = "0.4"